--- a/random.css.css
+++ b/random.css.css
@@ -142,37 +142,30 @@ a {
   color: #fff;
   font-size: 40px;
   cursor: pointer;
+  
 }
+.vcc{
+  display: none;
+}
+
 .bkt{
+  position: absolute;
+  z-index: 1000;
   box-shadow: 0 0 20px 0 black;
   right: 0;
-  height: 0;
-  width: 0;
-  background-color: #F2F2F2;
-  position: absolute;
-  z-index: 20;
-  animation: rote 0.4s;
+  height: 200vh;
+  width: 100%;
+  background-color: #525252;
   display: none;
 }
 
 .user {
+  z-index: 100;
   box-shadow: 0 0 3px 0 black;
   border-radius: 10px;
   height: 570px;
   width: 330px;
   background-color: #FFFFFF;
-}
-
-@keyframes rote {
-  0% {
-    width: 0;
-    height: 0;
-  }
-
-  100% {
-    width: 100%;
-    height: 100%;
-  }
 }
 
 .uimg {
@@ -190,6 +183,7 @@ a {
 }
 
 .si {
+  
   color: #4680ff;
   transition: all 0.5s;
 }
